--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -4,13 +4,13 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 %endif
 
-%define urlbarMarginInline 5px
 %define urlbarSearchButtonWidth calc(16px + 2 * var(--urlbar-icon-padding))
 
 :root {
   --toolbar-field-border-color: hsla(240,5%,5%,.25);
   --toolbar-field-focus-border-color: var(--focus-outline-color);
   --urlbar-container-padding: 1px;
+  --urlbar-margin-inline: 5px;
 }
 
 @media not (prefers-contrast) {
@@ -23,7 +23,7 @@
 #urlbar-container,
 #search-container {
   padding-block: 4px;
-  margin-inline: @urlbarMarginInline@;
+  margin-inline: var(--urlbar-margin-inline);
 }
 
 #search-container[cui-areatype="menu-panel"] {
@@ -219,23 +219,19 @@
 
 #urlbar[breakout][breakout-extend] {
   top: 0;
-  left: -@urlbarMarginInline@;
-  width: calc(100% + 2 * @urlbarMarginInline@);
+  left: calc(-1 * var(--urlbar-margin-inline));
+  width: calc(100% + 2 * var(--urlbar-margin-inline));
 }
 
 #urlbar[breakout][breakout-extend] > #urlbar-input-container {
   height: var(--urlbar-toolbar-height);
   padding-block: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2 + var(--urlbar-container-padding));
-  padding-inline: calc(@urlbarMarginInline@ + var(--urlbar-container-padding));
+  padding-inline: calc(var(--urlbar-margin-inline) + var(--urlbar-container-padding));
 }
 
 #urlbar.searchButton[breakout][breakout-extend] > #urlbar-input-container > #urlbar-search-button {
   fill: currentColor;
   fill-opacity: .6;
-}
-
-#urlbar-input {
-  padding-inline-start: var(--urlbarView-item-inline-padding);
 }
 
 @keyframes urlbar-grow {
